--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RCS Official Website</title>
+    <title>RCI Official Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -19,7 +19,7 @@
     <nav class="navbar">
         
         <div class="max-width">
-            <div class="logo"><a href="#">Robotics Club<span> SKIT</span></a></div>
+            <div class="logo"><a href="#">Robotics Club<span> India</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -42,7 +42,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, Welcome to </div>
-                <div class="text-2">Robotics Club SKIT</div>
+                <div class="text-2">Robotics Club India</div>
                 <div class="text-3">Innovation and Beyond! <span class="typing"></span></div>
             </div>
         </div>
@@ -55,11 +55,11 @@
             <h2 class="title">About us</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/rcslogo.png" alt="">
+                    <img src="images/rcilogo.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">We are Team RCS <span class="typing-2"></span></div>
-                    <p><b>The Robotics Club</b> is a community of students who derive pleasure in creating robots that may even be capable of working without human intervention. Each member of this family is provided insight into mechanical engineering, basic electronics and informatory aids besides the indispensable guidance of experienced members. The club supports and fosters interest in various aspects related to robotics in particular, mechanical design through workshops and projects. Robo-geeks are provided with a workspace, tools and other amenities to let their imagination loose.</p>
+                    <div class="text">We are Team RCI <span class="typing-2"></span></div>
+                    <p><b>The Robotics Club India</b> is a community of students who derive pleasure in creating robots that may even be capable of working without human intervention. Each member of this family is provided insight into mechanical engineering, basic electronics and informatory aids besides the indispensable guidance of experienced members. The club supports and fosters interest in various aspects related to robotics in particular, mechanical design through workshops and projects. Robo-geeks are provided with a workspace, tools and other amenities to let their imagination loose.</p>
                     <a href="https://www.skit.ac.in/student-corner/students-s-life.html?layout=view&id=248">Our Origin</a>
                 </div>
             </div>
@@ -171,7 +171,7 @@
     </section>
 
     <!--faculty coordinators-->
-     <section class="teams" id="teams">
+    <!-- <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title" id="title">Faculty Coordinators</h2>
             <div class="carousel owl-carousel">
@@ -198,14 +198,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <div id="spacing" ></div>
 
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title" id="title">Team RCS</h2>
+            <h2 class="title" id="title">Team RCI</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
@@ -374,7 +374,7 @@
   
     <!-- footer section start -->
     <footer>
-        <span>Developed By <a href="https://www.instagram.com/roboticsclubskit/">Robotics Club SKIT</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Developed By <a href="https://www.instagram.com/roboticsclubskit/">Robotics Club India</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
