--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </section>
-    <div id="register-button"> <a id="register" href="https://docs.google.com/forms/d/e/1FAIpQLSfm9SwXQNVEl4L-NFIcGBprGkSRbvP-KqyVVzI6_Wj0iz08yQ/viewform">Register Here</a></div>
+    <div id="register-button"> <a id="register" href="https://forms.gle/WLD3fZfYzfjgBpo39">Register Here</a></div>
 
     <!-- about section start -->
     <section class="about" id="about">
@@ -60,7 +60,7 @@
                 <div class="column right">
                     <div class="text">We are Team RCI <span class="typing-2"></span></div>
                     <p><b>The Robotics Club India</b> is a community of students who derive pleasure in creating robots that may even be capable of working without human intervention. Each member of this family is provided insight into mechanical engineering, basic electronics and informatory aids besides the indispensable guidance of experienced members. The club supports and fosters interest in various aspects related to robotics in particular, mechanical design through workshops and projects. Robo-geeks are provided with a workspace, tools and other amenities to let their imagination loose.</p>
-                    <a href="https://www.skit.ac.in/student-corner/students-s-life.html?layout=view&id=248">Our Origin</a>
+                    <a href="">Our Vision</a>
                 </div>
             </div>
         </div>
@@ -315,7 +315,7 @@
                 <div class="row">
                     <i class="fas fa-user"></i>
                     <div class="info">
-                        <div class="head"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfm9SwXQNVEl4L-NFIcGBprGkSRbvP-KqyVVzI6_Wj0iz08yQ/viewform">Register Here</a></div>
+                        <div class="head"><a href="https://forms.gle/WLD3fZfYzfjgBpo39">Register Here</a></div>
                         <div class="sub-title">Club Registration Form
 
 
@@ -327,21 +327,21 @@
                     <div class="row">
                         <i class="fas fa-camera"></i>
                         <div class="info">
-                            <div class="head"><a href="https://www.instagram.com/roboticsclubskit/">Instagram</a></div>
+                            <div class="head"><a href="https://www.instagram.com/roboticsclubindia/">Instagram</a></div>
                             <div class="sub-title">Our Instagram Handle</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fas fa-user-plus"></i>
                         <div class="info">
-                            <div class="head"><a href="http://discord.gg/TX6Db3rg4P">Discord</a></div>
+                            <div class="head"><a href="https://discord.gg/A89suuHD">Discord</a></div>
                             <div class="sub-title">Our Discord Server</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fas fa-star"></i>
                         <div class="info">
-                            <div class="head"><a href="https://github.com/roboticsclubskit">Github</a></div>
+                            <div class="head"><a href="https://github.com/roboticsclubindia">Github</a></div>
                             <div class="sub-title">Our Github Account</div>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                         <textarea cols="30" rows="10" placeholder="Review.." required></textarea>
                     </div>
                     <div class="button-area">
-                        <a href="mailto:roboticsclub@skit.ac.in">Mail Us</a>
+                        <a href="mailto:theroboticsclubindia@gmail.com">Mail Us</a>
                     </div>
                 </form>
             </div>
@@ -374,7 +374,7 @@
   
     <!-- footer section start -->
     <footer>
-        <span>Developed By <a href="https://www.instagram.com/roboticsclubskit/">Robotics Club India</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Developed By <a href="https://www.instagram.com/roboticsclubindia/">Robotics Club India</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
